# Game-Physics

./: CMakeLists.txt  README.md  build.sh
common/: AABB.cpp  AABB.h  Collider.cpp  Collider.h  Mat3.cpp  Mat3.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RigidBody.cpp  RigidBody.h  Vec3.cpp  Vec3.h
stage1_motion/: main.cpp  main_visible.cpp
stage2_broadphase/: Broadphase.cpp  Broadphase.h  PhysicsWorld.cpp  PhysicsWorld.h  main.cpp  main_visible.cpp
stage3_detection/: EPA.cpp  EPA.h  GJK.cpp  GJK.h  PhysicsWorld.cpp  PhysicsWorld.h  main.cpp  main_visible.cpp
stage4_resolution/: ContactConstraint.cpp  ContactConstraint.h  PhysicsWorld.cpp  PhysicsWorld.h  main.cpp  main_visible.cpp
stage5_stability/: ContactConstraint.cpp  ContactConstraint.h  PhysicsWorld.cpp  PhysicsWorld.h  main.cpp  main_visible.cpp
stage6_polyhedron/: HalfEdge.cpp  HalfEdge.h  PhysicsWorld.cpp  PhysicsWorld.h  PolyhedronCollider.cpp  PolyhedronCollider.h  main.cpp  main_visible.cpp
